--- a/Frontend/src/components/header/header.css
+++ b/Frontend/src/components/header/header.css
@@ -16,7 +16,7 @@
   left: 0;
   padding-top: 10px;
   width: 100%;
-  z-index: 999; /* Navbar'ın diğer içeriklerin üzerinde olmasını sağlar */
+  z-index: 999; /* Navbarın diğer içeriklerin üzerinde olmasını sağlar */
   min-height: 120px;
   box-shadow: 0 0 20px #1515165b;
 }
